--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,6 @@
 export(applyTableChanges)
 export(calcHtableDelta)
 export(htable)
+export(parseShinyInput.htable)
 export(renderHtable)
 importFrom(shiny,exprToFunction)
